<resources>
    <string name="app_name">Tasker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_done_text">Tasks Done</string>
    <string name="home_header_image_description_text">Blue cloud header image</string>
    <string name="tasks_for_today">Tasks for today</string>
    <string name="task_item_bcg_description">Task item background</string>
    <string name="no_description_task">No description task</string>
    <string name="done_text">Done</string>
    <string name="floating_add_task_btn_desc">Round floating button with plus sign on it. Press to add new task.</string>
    <string name="short_for_monday">Mon</string>
    <string name="short_for_tuesday">Tue</string>
    <string name="short_for_wednesday">Wed</string>
    <string name="short_for_thursday">Thu</string>
    <string name="short_for_friday">Fri</string>
    <string name="short_for_saturday">Sat</string>
    <string name="short_for_sunday">Sun</string>
    <string name="aircalendar_next_page_desc">Next page</string>
    <string name="aircalendar_prev_page_desc">Previous page</string>
    <string name="aircalendar_selection_circle_desc">Selection circle under number</string>
    <string name="aircalendar_cirlce_under_number_desc">Circle under number no show event</string>
    <string name="text_task_title">Task title:</string>
    <string name="text_task_desc">Task description:</string>
    <string name="view_page_task_title_edit_hint">No title</string>
    <string name="view_page_task_desc_edit_hint">No description</string>
    <string name="done_switch_text">Done</string>
    <string name="see_all_tasks_empty_hint">No Tasks for this date</string>
    <string name="use_current_day_switch_text">Use current day</string>
    <string name="select_date_btn_text">Press to select date</string>
    <string name="edit_task_btn_text">Edit task</string>
    <string name="title_here_text">Title Here</string>
    <string name="description_here_text">Description Here</string>
    <string name="add_task_for">Add task for %s</string>
    <string name="all_tasks_for">Add tasks for %s</string>
    <string name="set_to_text">Set to: %s</string>
    <string name="add_text">Add</string>
    <string name="edit_text">Edit</string>
    <string name="cancel_text">Cancel</string>
    <string name="today_text">Today</string>
    <string name="home_page_number_header_text">%1$d/%2$d</string>
    <string name="was_deleted_text">\"%s\" was deleted</string>
    <string name="undo_text">Undo</string>
    <string name="failed_to_delete_task_text">Failed to delete task</string>
    <string name="failed_to_make_task_done_text">Failed to make task done</string>
    <string name="failed_to_make_task_not_done_text">Failed to make task not done</string>
    <string name="unable_to_find_sel_task">Unable to find selected task</string>
    <string name="need_date_for_task">You need to specify date for your task</string>
    <string name="task_edited_text">Task was edited</string>
    <string name="no_tasks_to_do_today_text">No Tasks To Do Today</string>
    <string name="no_tasks_done_for_today_text">No Tasks Done For Today</string>

    <string name="congratulations_text">Greetings!</string>
    <string name="all_tasks_are_done_text">All task for today are done</string>

    <string name="home_page_title">Home</string>
    <string name="see_all_page_title">See All</string>
    <string name="task_view_page_title">Task View</string>
    <string name="task_edit_page_title">Edit Task</string>
</resources>