<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/dialog_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/title_here_text"
        android:inputType="text"
        style="@style/Theme.Tasker.EditText"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/dialog_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/description_here_text"
        android:inputType="textMultiLine"
        style="@style/Theme.Tasker.EditText"
        android:layout_marginBottom="20dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_is_task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/done_switch_text"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/paragraphColor" />



</LinearLayout>