<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_task_title"
            android:textColor="@color/dark_blue"/>

        <EditText
            android:id="@+id/task_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:enabled="false"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/view_page_task_title_edit_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_task_desc"
            android:textColor="@color/dark_blue"/>

        <EditText
            android:id="@+id/task_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:enabled="false"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/view_page_task_desc_edit_hint" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/view_switch_is_task_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/done_switch_text"
            android:focusable="false"
            android:clickable="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit" />

        <TextView
            android:id="@+id/task_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="12dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="?attr/semiTransparentHintColor"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>